reports/02-Python-functions.log
Traceback (most recent call last):
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 560, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\eeu227\AppData\Local\Continuum\anaconda3\envs\jbook_env\lib\site-packages\nbclient\client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
greetings(name='James bond', 'pt')
------------------

[1;36m  File [1;32m"C:\Users\eeu227\AppData\Local\Temp/ipykernel_30640/3848852848.py"[1;36m, line [1;32m1[0m
[1;33m    greetings(name='James bond', 'pt')[0m
[1;37m                                ^[0m
[1;31mSyntaxError[0m[1;31m:[0m positional argument follows keyword argument

SyntaxError: positional argument follows keyword argument (Temp/ipykernel_30640/3848852848.py, line 1)

